Add JSON support

--- a/templates/base.html
+++ b/templates/base.html
@@ -162,6 +162,8 @@
   /tag/TAG
   /post/SHORTCODE
   /?q=QUERY
+
+  Add ?format=json to get JSON data. CORS is supported.
 </pre>
 <script>
   (function () {
