More correct template handling

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
-{{template "header"}}
+{{define "content"}}
 
 <h2>Featured</h2>
 
 <ul>
-    <li><a href="/user/twomonkeys.in">Two Monkeys</a></li>
-    <li><a href="/user/petrus.malherbe">Petrus</a></li>
+  <li><a href="/user/twomonkeys.in">Two Monkeys</a></li>
+  <li><a href="/user/petrus.malherbe">Petrus</a></li>
 </ul>
 
-{{template "footer"}}
+{{end}}
