--- a/templates/search.html
+++ b/templates/search.html
@@ -1,4 +1,4 @@
-{{template "header"}}
+{{define "content"}}
 
 <h2>Results for "{{ .Query }}"</h2>
 
@@ -24,4 +24,4 @@
 {{end}}
 </ul>
 
-{{template "footer"}}
+{{end}}
