--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,3 @@
-{{define "header"}}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -152,9 +151,7 @@
     <input type="submit" value="go">
   </form>
 </div>
-{{end}}
-
-{{define "footer"}}
+{{block "content" . }} {{end}}
 <hr>
 <pre> Usage:
 
@@ -176,4 +173,3 @@
 </script>
 </body>
 </html>
-{{end}}
