--- a/templates/tag.html
+++ b/templates/tag.html
@@ -1,4 +1,4 @@
-{{template "header"}}
+{{define "content"}}
 
 <h2>{{ .Name }}</h2>
 
@@ -7,4 +7,4 @@
 <p>{{ .Text | linkify }} -- {{ .Time }}, {{ .Likes }} likes [<a href="/post/{{ .Shortcode }}">View</a>]</p>
 {{end}}
 
-{{template "footer"}}
+{{end}}
