--- a/templates/user.html
+++ b/templates/user.html
@@ -1,4 +1,4 @@
-{{template "header"}}
+{{define "content"}}
 
 <h1>{{ .Name }} ({{ .Username }})</h1>
 
@@ -10,4 +10,4 @@
 <p>{{ .Text | linkify }} -- {{ .Time }}, {{ .Likes }} likes [<a href="/post/{{ .Shortcode}}">view</a>]</p>
 {{end}}
 
-{{template "footer"}}
+{{end}}
