--- a/templates/tag.html
+++ b/templates/tag.html
@@ -3,7 +3,11 @@
 <h2>{{ .Name }}</h2>
 
 {{range .Posts}}
-<img src="{{ thumbmax . 400 }}">
+
+{{with sizemax . 400}}
+<img src="{{.URL}}" style="height: {{.Height}}px; width: {{.Width}}px">
+{{end}}
+
 <p>{{ .Text | linkify }} -- {{ .Time }}, {{ .Likes }} likes [<a href="/post/{{ .Shortcode }}">View</a>]</p>
 {{end}}
 
