--- a/templates/base.html
+++ b/templates/base.html
@@ -55,19 +55,6 @@
       margin-bottom: 1rem;
     }
 
-    abbr[title],
-    abbr[data-original-title] {
-      text-decoration: underline;
-      cursor: help;
-      border-bottom: 0;
-    }
-
-    address {
-      margin-bottom: 1rem;
-      font-style: normal;
-      line-height: inherit;
-    }
-
     ol,
     ul,
     dl {
@@ -82,21 +69,8 @@
       margin-bottom: 0;
     }
 
-    dt {
-      font-weight: 700;
-    }
-
-    dd {
-      margin-bottom: .5rem;
-      margin-left: 0;
-    }
-
     blockquote {
       margin: 0 0 1rem;
-    }
-
-    dfn {
-      font-style: italic;
     }
 
     b,
@@ -106,22 +80,6 @@
 
     small {
       font-size: 80%;
-    }
-
-    sub,
-    sup {
-      position: relative;
-      font-size: 75%;
-      line-height: 0;
-      vertical-align: baseline;
-    }
-
-    sub {
-      bottom: -.25em;
-    }
-
-    sup {
-      top: -.5em;
     }
 
     /* custom */
@@ -171,5 +129,7 @@
     }
   })()
 </script>
+<script src="/static/app.js"></script>
+{{template "custom.html"}}
 </body>
 </html>
